--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "coinit",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "bin": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/conwnet/coinit/issues"
   },
-  "homepage": "https://github.com/conwnet/coinit#readme"
+  "homepage": "https://github.com/conwnet/coinit#readme",
+  "devDependencies": {}
 }
