--- a/react-electron/package.json
+++ b/react-electron/package.json
@@ -2,9 +2,9 @@
   "name": "react-electron",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run dev",
     "build": "webpack --env.production",
     "dev": "webpack-dev-server --hot --port 8080",
     "electron": "electron ."
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^1.8.6",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
@@ -23,6 +24,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.2",
