--- a/react-simple/.babelrc
+++ b/react-simple/.babelrc
@@ -2,7 +2,7 @@
     "presets": ["env", "react"],
     "plugins": [
         "transform-class-properties",
-        "transform-decorators-legacy",
+        "transform-decorators-legacy"
     ],
     "env": {
         "development": {
