--- a/react-simple/package.json
+++ b/react-simple/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run dev",
     "build": "webpack --env.production",
     "dev": "webpack-dev-server --hot"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
