--- a/templates/react-electron-sample/package.json
+++ b/templates/react-electron-sample/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "react-simple",
+  "name": "react-electron-sample",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "npm run dev",
     "build": "webpack --env.production",
-    "dev": "webpack-dev-server --hot"
+    "dev": "webpack-dev-server --hot --port 8080",
+    "electron": "electron ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "electron": "^1.8.6",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
@@ -22,6 +24,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.2",
