--- a/templates/react-redux-sample/package.json
+++ b/templates/react-redux-sample/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "react-electron",
+  "name": "react-redux-sample",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "npm run dev",
     "build": "webpack --env.production",
-    "dev": "webpack-dev-server --hot --port 8080",
-    "electron": "electron ."
+    "dev": "webpack-dev-server --hot"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^1.8.6",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-loader": "^7.1.4",
@@ -24,7 +24,6 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.2",
